Fixed some responsiveness issues on mobile

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -28,13 +28,6 @@ body {
     width: 100vw;
 }
 
-.flex-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 88%;
-    margin: 0 8%;
-}
 
 .header {
     display: flex;
@@ -162,6 +155,14 @@ body {
         }
     }
 
+    .flex-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 88%;
+        margin: 0 8%;
+    }
+
     .hero {
         display: flex;
         flex-direction: column;
@@ -201,10 +202,30 @@ body {
             align-content: center;
 
             &__heading {
+                width: 100%;
                 font-size: 3.2em;
             }
             &__subheading {
                 font-size: 1.2em;
+            }
+        }
+
+        @media only screen and (max-width: 480px) {
+            width: 100%;
+            margin: 0 auto;
+            text-align: center;
+
+            &__heading {
+                width: 100%;
+                font-size: 2.6em;
+            }
+        
+            &__subheading {
+                font-size: 0.8em;
+            }
+            
+            &__description{
+                font-size: 1em;
             }
         }
     }
@@ -514,6 +535,36 @@ body {
                     width: 100%;
                 }
             }
+        }
+
+        @media only screen and (max-width: 480px) {
+            gap: 4vh;
+            
+            &__heading {
+                font-size: 1.2em;
+            }
+        
+            &__grid {
+                width: 100%;
+                height: fit-content;
+                grid-template-columns: repeat(2, 1fr);
+                justify-content: space-around;
+                justify-items: center;
+        
+                .skill {
+                    width: 100%;
+                    
+                    img{
+                        transform: scale(0.85);
+                    }
+
+                    div{
+                        display: none;
+                    }    
+                }
+            }
+
+            
         }
     }
 }
